views pacote controller

--- a/Views/Plano/EditarPlanoId.cshtml
+++ b/Views/Plano/EditarPlanoId.cshtml
@@ -1,5 +1,5 @@
-﻿@model TCC_Viagens.Models.Banco.Plano
-<link href="~/Models/Style/Cadastrar/style.css" rel="stylesheet" />
+﻿@model AspViagens.Models.Banco.Plano
+
 @{
     ViewBag.Title = "EditarPlanoId";
 }
