--- a/Views/Home/Grafico.cshtml
+++ b/Views/Home/Grafico.cshtml
@@ -39,6 +39,6 @@
     </script>
 
     <div id="curve_chart" style="width: 900px; height: 500px"></div>
-    @Html.ActionLink("Voltar","ConsTdDetalhes")
+    @Html.ActionLink("Voltar","ConsTdDetalhes","Home")
     @ViewBag.SomaValores;
 
