--- a/Views/Home/Pagamento.cshtml
+++ b/Views/Home/Pagamento.cshtml
@@ -2,21 +2,188 @@
 @{
     ViewBag.Title = "Pagamento";
 }
-
-<h2>Selecione uma forma de pagamento</h2>
+<link href="~/Models/Style/Cadastrar/style.css" rel="stylesheet" />
 
 @using (Html.BeginForm("Confi_Pagamento", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="form-horizontal container center">
-        <div class="form-group">
-            @Html.DropDownList("Tipo_Pagamento", ViewBag.Tipo_Pagamento as List<SelectListItem>)
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Finalizar Cadastro" class="color btn btn-default azul" />
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-4 order-md-2 mb-4">
+                <h4 class="d-flex justify-content-between align-items-center mb-3">
+                    <span class="text-muted">Seu carrinho</span>
+                    <span class="badge badge-secondary badge-pill">3</span>
+                </h4>
+                <ul class="list-group mb-3">
+                    <li class="list-group-item d-flex justify-content-between lh-condensed">
+                        <div>
+                            <h6 class="my-0">Nome do produto</h6>
+                            <small class="text-muted">Breve descrição</small>
+                        </div>
+                        <span class="text-muted">R$12</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between lh-condensed">
+                        <div>
+                            <h6 class="my-0">Segundo produto</h6>
+                            <small class="text-muted">Breve descrição</small>
+                        </div>
+                        <span class="text-muted">R$8</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between lh-condensed">
+                        <div>
+                            <h6 class="my-0">Terceiro item</h6>
+                            <small class="text-muted">Breve descrição</small>
+                        </div>
+                        <span class="text-muted">R$5</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between bg-light">
+                        <div class="text-success">
+                            <h6 class="my-0">Código de promoção</h6>
+                            <small>CODIGOEXEMEPLO</small>
+                        </div>
+                        <span class="text-success">-R$5</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between">
+                        <span>Total (BRL)</span>
+                        <strong>R$20</strong>
+                    </li>
+                </ul>
+
+                <br />
+                <input type="submit" value="Finalizar compra" class="color btn btn-success" />
+
+            </div>
+            <div class="col-md-8 order-md-1">
+                <h4 class="mb-3">Endereço de cobrança</h4>
+                <form class="needs-validation was-validated" novalidate="">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="primeiroNome">Nome</label>
+                            <input type="text" class="form-control" id="primeiroNome" placeholder="" value="" required="">
+                            <div class="invalid-feedback">
+                                É obrigatório inserir um nome válido.
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="sobrenome">Sobrenome</label>
+                            <input type="text" class="form-control" id="sobrenome" placeholder="" value="" required="">
+                            <div class="invalid-feedback">
+                                É obrigatório inserir um sobre nome válido.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="email">Email <span class="text-muted">(Opcional)</span></label>
+                        <input type="email" class="form-control" id="email" placeholder="fulano@exemplo.com">
+                        <div class="invalid-feedback">
+                            Por favor, insira um endereço de e-mail válido, para atualizações de entrega.
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+
+                    </div>
+
+                    <div class="mb-3">
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-3 mb-3">
+                            <label for="cep">CEP</label>
+                            <input type="text" class="form-control" id="cep" placeholder="" required="">
+                            <div class="invalid-feedback">
+                                É obrigatório inserir um CEP.
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="mb-4">
+
+                    <h4 class="mb-3">Pagamento</h4>
+
+                    <div class="d-block my-3">
+                        <div class="form-group">
+                            @Html.DropDownList("Tipo_Pagamento", ViewBag.Tipo_Pagamento as List<SelectListItem>, new { @class = "form-control dropdown" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="cc-nome">Nome no cartão</label>
+                            <input type="text" class="form-control" id="cc-nome" placeholder="" required="">
+                            <small class="text-muted">Nome completo, como mostrado no cartão.</small>
+                            <div class="invalid-feedback">
+                                O nome que está no cartão é obrigatório.
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="cc-numero">Número do cartão de crédito</label>
+                            <input type="text" class="form-control" id="cc-numero" placeholder="" required="">
+                            <div class="invalid-feedback">
+                                O número do cartão de crédito é obrigatório.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 mb-3">
+                            <label for="cc-expiracao">Data de expiração</label>
+                            <input type="text" class="form-control" id="cc-expiracao" placeholder="" required="">
+                            <div class="invalid-feedback">
+                                Data de expiração é obrigatória.
+                            </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <label for="cc-cvv">CVV</label>
+                            <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
+                            <div class="invalid-feedback">
+                                Código de segurança é obrigatório.
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
             </div>
         </div>
+
+
     </div>
+
+    <!-- Principal JavaScript do Bootstrap
+    ================================================== -->
+    <!-- Foi colocado no final para a página carregar mais rápido -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script>
+// Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
+      (function() {
+        'use strict';
+
+        window.addEventListener('load', function() {
+          // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
+          var forms = document.getElementsByClassName('needs-validation');
+
+          // Faz um loop neles e previne envio
+          var validation = Array.prototype.filter.call(forms, function(form) {
+            form.addEventListener('submit', function(event) {
+              if (form.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+              form.classList.add('was-validated');
+            }, false);
+          });
+        }, false);
+      })();
+    </script>
+
 }
 
