--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="~/Imagens/singapura.png" class="d-block w-100 carrossel" alt="...">
+            <img src="~/Imagens/singapura.png" class="d-block w-100 carrossel-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sub-carrossel">INTERCÂMBIO EM</h5>
                 <h1 class="titulo">Singapura</h1>
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="~/Imagens/irlanda1.png" class="d-block w-100 carrossel" alt="...">
+            <img src="~/Imagens/irlanda1.png" class="d-block w-100 carrossel-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="sub-carrossel">INTERCÂMBIO NA</h5>
                 <h1 class="titulo">Irlanda</h1>
@@ -90,7 +90,7 @@
 </div>
 
 <div class="center">
-    <div class="row" style="background-color: white; margin-top: 5rem; justify-content: center; align-items: center; overflow: hidden;;">
+    <div class="row" style="background-color: white; margin-top: 5rem; justify-content: center; align-items: center; overflow: hidden;">
         <div class="col" style="display: flex; justify-content: center">
             <img src="~/Imagens/img-index1.png" style="width: 30rem; " />
         </div>
