--- a/Views/Home/Carrinho.cshtml
+++ b/Views/Home/Carrinho.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AspViagens.Models.Banco.modelCompra
-
+<link href="~/Styles/reset.css" rel="stylesheet" />
 @{
     ViewBag.Title = "Carrinho";
 }
-<h2>Carrinho</h2>
+
 @if (TempData["Mensagem Erro Carrinho"] != null)
 {
     <div class="alert alert-danger" role="alert">
@@ -11,35 +11,111 @@
         @TempData["Mensagem Erro Carrinho"] @Html.ActionLink("Login", "Login", "Login")
     </div>
 }
-<table>
-    @if (Session["Carrinho"] == null)
-    {
-        <h2>Voçe não possui itens no carrinho</h2>
-    }
-    else
-    {
-        foreach (var item in Model.PlanosPedidos)
-        {
-            if (item.idPacote == null)
-            {
-                <h2>Voçe não possui itens no carrinho</h2>
-            }
-            else
-            {
-                <tr>
-                    <td>Plano</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>@item.nomePacote</td>
-                    <td><img alt="Thumbnail [300x300]" style="width: 30px; height: 30px;" src="@item.imagem" /></td>
-                    <td>@Html.ActionLink("Remover", "ExcluirPacote", new { id = item.PlanoPedidoID }, null)</td>
-                </tr>
-            }
-            @Html.ActionLink("Comprar", "Pagamento", "Home")
-        }
+<section class="h-100 gradient-custom">
+    <div class="container py-5">
+        <div class="row d-flex justify-content-center my-4">
+            <div class="col-md-8">
+                <div class="card mb-4">
+                    <div class="card-header py-3">
+                        <h5 class="mb-0">Carrinho</h5>
+                    </div>
+                    <div class="card-body">
 
-    }
-</table>
-<br />
+                        @if (Session["Carrinho"] == null)
+                        {
+                            <h3>Você não possui itens no carrinho</h3>
+                        }
+                        else
+                        {
+
+                            foreach (var item in Model.PlanosPedidos)
+                            {
+                                if (item.PlanoPedidoID == null)
+                                {
+                                    <h3>Você não possui itens no carrinho</h3>
+                                }
+                                else
+                                {
+                                    <!-- Single item -->
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+                                            <!-- Image -->
+                                            <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+                                                <img src="@item.imagem" class="w-100" alt="Imagem Plano" />
+                                                <a href="#!">
+                                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+                                                </a>
+                                            </div>
+                                            <!-- Image -->
+                                        </div>
+
+                                        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                                            <!-- Data -->
+                                            <p><strong> @item.nomePacote</strong></p>
+                                            <button type="button" class="btn btn-danger btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
+                                                    title="Remove item">
+                                                @Html.ActionLink("Remover", "ExcluirPlano", new { id = item.PlanoPedidoID }, new { @style = "color: white; text-decoration: none" })
+                                            </button>
+                                            <!-- Data -->
+                                        </div>
+
+                                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+
+                                            <!-- Price -->
+                                            <p class="text-start text-md-center">
+                                                <strong>R$ </strong>
+                                            </p>
+                                            <!-- Price -->
+                                        </div>
+                                    </div>
+                                    <!-- Single item -->
+
+                                    <hr class="my-4" />
+
+                                }
+                            }
+                        }
+                    </div>
+                </div>
+
+                <div class="card mb-4 mb-lg-0">
+                    <div class="card-body">
+                        <p><strong>Nós aceitamos</strong></p>
+                        <img class="me-2" width="45px"
+                             src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg"
+                             alt="Visa" />
+                        <img class="me-2" width="45px"
+                             src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg"
+                             alt="American Express" />
+                        <img class="me-2" width="45px"
+                             src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"
+                             alt="Mastercard" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <div class="card-header py-3">
+                        <h5 class="mb-0">Resumo</h5>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                                <div>
+                                    <strong>Valor Total</strong>
+                                </div>
+                                <span><strong>R$ 0,00 </strong></span>
+                            </li>
+                        </ul>
+
+                        <button type="button" class="btn btn-success btn-lg btn-block">
+                            @Html.ActionLink("Finalizar compra", "Pagamento", "Home", new { @style = "color: white; text-decoration: none" })
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
